[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/plancher.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 10 )

[node name="plancher" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 50, 10 )
shape = SubResource( 1 )
one_way_collision = true

[node name="CasserTemps1" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CasserTemps2" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="CasserTemps1" to="." method="_on_CasserTemps1_timeout"]
[connection signal="timeout" from="CasserTemps2" to="." method="_on_CasserTemps2_timeout"]
